<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">震荡混匀仪</string>
    <string name="welcome_main">欢迎使用本产品</string>
    <string name="file">文件</string>
    <string name="setting">设置</string>
    <string name="showfast">展示</string>
    <string name="bio_hh">小时</string>
    <string name="bio_mm">分钟</string>
    <string name="run">运行</string>
    <string name="inching">点动</string>
    <string name="Runsettings">运行设置</string>
    <string name="setting_wifi">WIFI连接</string>
    <string name="dialog_voice_1">按键提示音</string>
    <string name="dialog_voice_2">报警提示音</string>
    <string name="dialog_voice_3">程序结束提示音</string>
    <string name="dialog_voice_4">温度到达提示音</string>
    <string name="addfile">添加</string>
    <string name="saveas">另存</string>
    <string name="addstep">加步骤</string>
    <string name="delstep">减步骤</string>
    <string name="edit">编辑</string>
    <string name="del">删除</string>
    <string name="returnname">返回</string>
    <string name="ImportExport">导入/导出</string>
    <string name="mounting_u_disk">挂载U盘成功</string>
    <string name="removed_u_disk">U盘移除成功</string>
    <string name="In_preparation_USB">u盘准备中，请稍后重试</string>
    <string name="No_software_detected">未检测到文件</string>
    <string name="setting_dialog_usb_no">usb 未插入</string>
    <string name="file_existed">已存在</string>
    <string name="export_succeeded">导出成功</string>
    <string name="import_succeeded">导入成功</string>
    <string name="changlanguage">中英文切换</string>
    <string name="voice_setting">声音设置</string>
    <string name="firmwareupdate">固件升级</string>
    <string name="softwareupgrade">软件升级</string>
    <string name="nativeinformation">本机信息</string>
    <string name="cancel">取消</string>
    <string name="refre">刷新</string>
    <string name="sure">确定</string>
    <string name="chinese">中文</string>
    <string name="english">英文</string>
    <string name="calibration">校准</string>
    <string name="pause">暂停</string>
    <string name="Continue">继续</string>
    <string name="nextSection">下一节</string>
    <string name="next">下一个</string>
    <string name="update_failed">升级失败!</string>
    <string name="ask_update_software_start">检测到文件&#8194;</string>
    <string name="ask_update_software_end">,是否进行更新?</string>
    <string name="dialog_info_program_stop" translatable="true">是否停止？</string>
    <string name="stopit">停止</string>
    <string name="details">详情</string>
    <string name="runend">运行结束</string>
    <string name="Heatingprocess">升温过程</string>
    <string name="save">保存</string>
    <string name="temperature">温度(℃)</string>
    <string name="speed">速度(C/min)</string>
    <string name="time">时间(hh:mm)</string>
    <string name="revolution">转速(rpm)</string>
    <string name="direction">方向</string>
    <string name="shock">震荡(mm:ss)</string>
    <string name="blank">间歇(mm:ss)</string>
    <string name="temperatures">温度:</string>
    <string name="speeds">速度：(℃/min)</string>
    <string name="times">时间:</string>
    <string name="revolutions">转速:</string>
    <string name="ForwardRotation">正转</string>
    <string name="reversal">反转</string>
    <string name="Intermittent">间歇正转</string>
    <string name="Intermittentinversion">间歇反转</string>
    <string name="shocktime">震荡时间：</string>
    <string name="pausetime">暂停时间：</string>
    <string name="msgdialog">消息框</string>
    <string name="savefilesdialog">确定保存文件</string>
    <string name="isdelete">确定要删除吗</string>
    <string name="isRun">确定要运行吗</string>
    <string name="error">报错了，点击重启</string>
    <string name="upperlimit">步骤超过上限</string>
    <string name="nostepdelfile">没有创建步骤，文件自动删除</string>
    <string name="issave">是否保存</string>
    <string name="setting_factory">出厂设置</string>
    <string name="senior_setting">高级设置</string>
    <string name="debug_mode">调试模式</string>
    <string name="factory_mode">工厂模式</string>
    <string name="dialog_info_communication_failed" translatable="true">设备无法正常通信</string>
    <string name="RunisExit">正在运行,确定要退出吗</string>
    <string name="clear">清除</string>
    <string name="dialog_inout_info_1">未选择外设程序</string>
    <string name="dialog_inout_info_2">未选择本地程序</string>
    <string name="success">完成</string>
    <string name="deviceno">设备编号:</string>
    <string name="Localname">本机名称:</string>
    <string name="udrive">U盘</string>
    <string name="local">本地</string>
    <string name="pleasechoosefile">请选择程序</string>
    <string name="step">步骤</string>
    <string name="noDelete">不能删除</string>
    <string name="RemainingTime">剩余时间:</string>
    <string name="currentStep">当前步骤:</string>
    <string name="StepTime">步骤时间:</string>
    <string name="RadiatorTemp">散热器温度:</string>
    <string name="step1">步骤1</string>
    <string name="step2">步骤2</string>
    <string name="step3">步骤3</string>
    <string name="step4">步骤4</string>
    <string name="step5">步骤5</string>
    <string name="loopset">循环设置</string>
    <string name="loopbegin">开始步骤:</string>
    <string name="loopover">结束步骤:</string>
    <string name="loopnum">循环次数:</string>
    <string name="loopenble">循环开关:</string>
    <string name="bio_symbols">符号</string>
    <string name="bio_letters">字母</string>
    <string name="bio_number">数字</string>
    <string name="bio_clear">清空</string>
    <string name="bio_done">完成</string>
    <string name="up_speed">升温速率:</string>
    <string name="down_speed">降温速率:</string>
    <string name="motordirection">电机方向:</string>
    <string name="mixingmode">混匀方式:</string>
    <string name="blendstart">混匀起点</string>
    <string name="mixingtime">混匀时间</string>
    <string name="debugmodule">调试模块</string>
    <string name="Temperaturecorrection">温度修正</string>
    <string name="Localcorrelation">本机相关</string>
    <string name="dialog_factory_tempe_update">温度修正值（-9.99 ～9.99℃）</string>
    <string name="dialog_factory_motor_write">写入修正值</string>
    <string name="Temperaturerisesetting">升温设置</string>
    <string name="Preheating">提前加热</string>
    <string name="Heatingswitch">加热开关</string>
    <string name="Temperatureras">升温动作同步</string>
    <string name="Heatupbeforeaction">先升温后动作</string>
    <string name="Raisethetemperaturebelowttt">升温到低于目标温度（2-50℃）开始动作</string>
    <string name="Theprocedurestartsheating">程序提前1-3步开始加热</string>
    <string name="Thecorrespondingheatingchannelisclosed">对应加热通道关闭</string>
    <string name="Thecorrespondingheatingchannelisopen">对应加热通道开启</string>
    <string name="rate">速率</string>
    <string name="mixedmode">混合模式</string>
    <string name="blendstartpoint">混合起点</string>
    <string name="Temperaturemode">温度模式:</string>
    <string name="FullPower">全功率</string>
    <string name="continued">持续:</string>
    <string name="tmcustom">自定义</string>
    <string name="intermission">间歇</string>
    <string name="interval">间隔:</string>
    <string name="continuity">连续</string>
    <string name="syncwork">同步运行(加热混匀同步运行)</string>
    <string name="mixpreh">预热后混匀(到达设定温度开始混匀)</string>
    <string name="mixprehnok">预热后混匀</string>
    <string name="syncnok">同步运行</string>
    <string name="forwardmixing">正转混匀</string>
    <string name="rotarymixing">反转混匀</string>
    <string name="Forwardandreversemixing">正反转混匀</string>
    <string name="Fast">快速</string>
    <string name="model_1">模块 1:</string>
    <string name="Heatingcommand">加热命令</string>
    <string name="Refrigerationcommand">制冷命令</string>
    <string name="closecommand">关闭命令</string>
    <string name="modle_2">模块 2:</string>
    <string name="modle_3">模块 3:</string>
    <string name="modle_4">模块 4:</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="debug_fan">风扇:</string>
    <string name="Motor">电机:</string>
    <string name="led">led:</string>
    <string name="unprotected_networks">未受保护的网络</string>
    <string name="pass">通过&#8194;</string>
    <string name="to_protect">&#8194;进行保护</string>
    <string name="setting_wifi_ok">已连接</string>
    <string name="signal_strength">信号强度</string>
    <string name="security_level">安全性</string>
    <string name="password">密码</string>
    <string name="show_password">显示密码</string>
    <string name="connect">连接</string>
    <string name="disconnect">断开连接</string>
    <string name="forget">忘记配置</string>
    <string name="conn_status">连接状态</string>
    <string name="ip_address">IP地址</string>
    <string name="weak">弱</string>
    <string name="strong">强</string>
    <string name="stronger">较强</string>
    <string name="strongest">极强</string>
    <string name="Lid">Lid:</string>
    <string name="dialog_hardup_running">正在升级...</string>
    <string name="dialog_hardup_stop">升级结束</string>
    <string name="dialog_hardup_fail">升级失败</string>
    <string name="softer_version">软件版本:</string>
    <string name="firmware_version">固件版本:</string>
    <string name="recovery">恢复出厂设置</string>
    <string name="loadingupdate">正在加载文件……</string>
    <string name="loading_update_success">加载完毕</string>
    <string name="loading_update_fail">加载失败</string>
    <string name="Transmitting">正在传输……</string>
    <string name="Transmissioncomplete">传输完成</string>
    <string name="writein">写入</string>
    <string name="run_state_stop">停止</string>
    <string name="run_state_run">运行中</string>
    <string name="run_state_pause">暂停</string>
    <string name="run_state_incubate">孵育中</string>
    <string name="run_state_warmup">预热</string>
    <string name="err_SEC_UNKNOWN">设备未知的错误</string>
    <string name="err_SEC_MODSOR1OPEN">模块传感器1开路</string>
    <string name="err_SEC_MODSOR1SHORT">模块传感器1短路</string>
    <string name="err_SEC_MODSOR2OPEN">模块传感器2开路</string>
    <string name="err_SEC_MODSOR2SHORT">模块传感器2短路</string>
    <string name="err_SEC_MODSOR3OPEN">模块传感器3开路</string>
    <string name="err_SEC_MODSOR3SHORT">模块传感器3短路</string>
    <string name="err_SEC_MODSOR4OPEN">模块传感器4开路</string>
    <string name="err_SEC_MODSOR4SHORT">模块传感器4短路</string>
    <string name="err_SEC_MODSOR5OPEN">模块传感器5开路</string>
    <string name="err_SEC_MODSOR5SHORT">模块传感器5短路</string>
    <string name="err_SEC_MODSOR6OPEN">模块传感器6开路</string>
    <string name="err_SEC_MODSOR6SHORT">模块传感器6短路</string>
    <string name="err_SEC_LIDSORAOPEN">热盖传感器A开路</string>
    <string name="err_SEC_LIDSORASHORT">热盖传感器A短路</string>
    <string name="err_SEC_LIDSORAERROR" translatable="false">热盖传感器A故障</string>
    <string name="err_SEC_LIDSORBOPEN">热盖传感器B开路</string>
    <string name="err_SEC_LIDSORBSHORT">热盖传感器B短路</string>
    <string name="err_SEC_LIDSORBERROR" translatable="false">热盖传感器B故障</string>
    <string name="err_SEC_LIDSORCOPEN">热盖传感器C开路</string>
    <string name="err_SEC_LIDSORCSHORT">热盖传感器C短路</string>
    <string name="err_SEC_LIDSORCERROR" translatable="false">热盖传感器C故障</string>
    <string name="err_SEC_RADSORAOPEN">散热器传感器A开路</string>
    <string name="err_SEC_RADSORASHORT">散热器传感器A短路</string>
    <string name="err_SEC_RADSORAERROE" translatable="false">散热器传感器A故障</string>
    <string name="err_SEC_RADSORBOPEN">散热器传感器B开路</string>
    <string name="err_SEC_RADSORBSHORT">散热器传感器B短路</string>
    <string name="err_SEC_RADSORBERROE" translatable="false">散热器传感器B故障</string>
    <string name="err_SEC_RADSORCOPEN">散热器传感器C开路</string>
    <string name="err_SEC_RADSORCSHORT">散热器传感器C短路</string>
    <string name="err_SEC_RADSORCERROE" translatable="false">散热器传感器C故障</string>
    <string name="err_SEC_INSIDESOROPEN">内部传感器开路</string>
    <string name="err_SEC_INSIDESORSHORT">内部传感器短路</string>
    <string name="err_SEC_INSIDESORERROR">内部传感器故障</string>
    <string name="err_SEC_MOD1TOOHEAT">模块1温度过高</string>
    <string name="err_SEC_MOD1TOOCOOL">模块1温度过低</string>
    <string name="err_SEC_MOD2TOOHEAT">模块2温度过高</string>
    <string name="err_SEC_MOD2TOOCOOL">模块2温度过低</string>
    <string name="err_SEC_MOD3TOOHEAT">模块3温度过高</string>
    <string name="err_SEC_MOD3TOOCOOL">模块3温度过低</string>
    <string name="err_SEC_MOD4TOOHEAT">模块4温度过高</string>
    <string name="err_SEC_MOD4TOOCOOL">模块4温度过低</string>
    <string name="err_SEC_MOD5TOOHEAT">模块5温度过高</string>
    <string name="err_SEC_MOD5TOOCOOL">模块5温度过低</string>
</resources>