<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="@dimen/dip_800"
    android:layout_gravity="center"
    android:background="@drawable/setting_dialog_bg"
    android:layout_height="480dp"
    android:orientation="vertical">



    <TextView
        android:background="@drawable/setting_dialog_title_bg"
        android:text="@string/changlanguage"
        android:gravity="center"
        android:textSize="@dimen/sp_25"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_55">

    </TextView>

    <RadioGroup
        android:id="@+id/dialog_language_group"
        android:layout_width="@dimen/dip_800"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/dialog_language_btn1"
            android:layout_width="@dimen/dip_600"
            android:layout_height="@dimen/dip_150"
            android:checked="true"
            android:text="@string/chinese"
            android:textSize="@dimen/sp_24" />

        <RadioButton
            android:id="@+id/dialog_language_btn2"
            android:layout_width="@dimen/dip_600"
            android:layout_height="@dimen/dip_150"
            android:text="@string/english"
            android:textSize="@dimen/sp_24" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_120"
        android:gravity="center">

        <Button
            android:id="@+id/dialog_language_confirm"
            android:layout_width="@dimen/dip_250"
            android:layout_height="@dimen/dip_70"
            android:background="@drawable/selector_background"
            android:text="@string/sure"
            android:textAllCaps="false"
            android:gravity="center"
            android:textColor="@drawable/selector_text"
            android:textSize="@dimen/sp_20" />

        <Button
            android:id="@+id/dialog_language_cancel"
            android:layout_width="@dimen/dip_250"
            android:layout_height="@dimen/dip_70"
            android:layout_marginLeft="@dimen/dip_100"
            android:background="@drawable/selector_background"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:gravity="center"
            android:textColor="@drawable/selector_text"
            android:textSize="@dimen/sp_20" />
    </LinearLayout>


</LinearLayout>