<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:horizontalGap="0dip"
    android:keyHeight="75dp"
    android:keyWidth="75dp"
    android:verticalGap="0dip" >

    <Row>
        <Key
            android:codes="113"
            android:keyWidth="80dp"
            android:keyEdgeFlags="left"
            android:keyLabel="q" />
        <Key
            android:codes="119"
            android:keyLabel="w" />
        <Key
            android:codes="101"
            android:keyLabel="e" />
        <Key
            android:codes="114"
            android:keyLabel="r" />
        <Key
            android:codes="116"
            android:keyLabel="t" />
        <Key
            android:codes="121"
            android:keyLabel="y" />
        <Key
            android:codes="117"
            android:keyLabel="u" />
        <Key
            android:codes="105"
            android:keyLabel="i" />
        <Key
            android:codes="111"
            android:keyLabel="o" />
        <Key
            android:codes="112"
            android:keyEdgeFlags="right"
            android:keyWidth="80dp"
            android:keyLabel="p" />
    </Row>
    <Row>
        <Key
            android:codes="97"
            android:keyEdgeFlags="left"
            android:keyLabel="a"
            android:keyWidth="117dp" />
        <Key
            android:codes="115"
            android:keyLabel="s" />
        <Key
            android:codes="100"
            android:keyLabel="d" />
        <Key
            android:codes="102"
            android:keyLabel="f" />
        <Key
            android:codes="103"
            android:keyLabel="g" />
        <Key
            android:codes="104"
            android:keyLabel="h" />
        <Key
            android:codes="106"
            android:keyLabel="j" />
        <Key
            android:codes="107"
            android:keyLabel="k" />
        <Key
            android:codes="108"
            android:keyEdgeFlags="right"
            android:keyLabel="l"
            android:keyWidth="117dp" />
    </Row>
    <Row>
        <Key
            android:codes="-41"
            android:keyEdgeFlags="left"
            android:keyIcon="@drawable/keyboard_shift"
            android:keyWidth="117dp" />
        <Key
            android:codes="122"
            android:keyLabel="z" />
        <Key
            android:codes="120"
            android:keyLabel="x" />
        <Key
            android:codes="99"
            android:keyLabel="c" />
        <Key
            android:codes="118"
            android:keyLabel="v" />
        <Key
            android:codes="98"
            android:keyLabel="b" />
        <Key
            android:codes="110"
            android:keyLabel="n" />
        <Key
            android:codes="109"
            android:keyLabel="m" />
        <Key
            android:codes="-5"
            android:isRepeatable="true"
            android:keyEdgeFlags="right"
            android:keyIcon="@drawable/keyboard_delete"
            android:keyWidth="117dp" />
    </Row>
    <Row>
        <Key
            android:codes="-11"
            android:keyEdgeFlags="left"
            android:keyLabel="@string/bio_number"
            android:keyWidth="117dp" />
        <Key
            android:codes="-21"
            android:keyLabel="@string/bio_symbols"
            android:keyWidth="115dp" />
        <Key
            android:codes="-31"
            android:keyLabel="@string/bio_letters"
            android:keyWidth="115dp" />
        <Key
            android:codes="32"
            android:keyIcon="@drawable/keyboard_space"
            android:keyWidth="175dp" />
        <Key
            android:codes="-2"
            android:keyLabel="@string/bio_clear"
            android:keyWidth="115dp" />
        <Key
            android:codes="-3"
            android:keyEdgeFlags="right"
            android:keyLabel="@string/bio_done"
            android:keyWidth="117dp" />
    </Row>

</Keyboard>