<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="@dimen/dip_700"
    android:layout_gravity="center"
    android:background="@drawable/setting_dialog_bg"
    android:layout_height="500dp"
    android:orientation="vertical">

    <TextView
        android:background="@drawable/setting_dialog_title_bg"
        android:text="@string/setting_wifi"
        android:gravity="center"
        android:textSize="@dimen/sp_25"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_55">

    </TextView>

    <LinearLayout
        android:layout_width="@dimen/dip_700"
        android:layout_height="320dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </RelativeLayout>



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_120"
        android:gravity="center">

        <Button
            android:id="@+id/dialog_language_confirm"
            android:layout_width="@dimen/dip_120"
            android:layout_height="@dimen/dip_40"
            android:background="@drawable/selector_background"
            android:text="@string/sure"
            android:textAllCaps="false"
            android:gravity="center"
            android:textColor="@drawable/selector_text"
            android:textSize="@dimen/sp_20" />

        <Button
            android:id="@+id/dialog_language_cancel"
            android:layout_width="@dimen/dip_120"
            android:layout_height="@dimen/dip_40"
            android:layout_marginLeft="@dimen/dip_40"
            android:background="@drawable/selector_background"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:gravity="center"
            android:textColor="@drawable/selector_text"
            android:textSize="@dimen/sp_20" />

    </LinearLayout>




</LinearLayout>