<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:horizontalGap="0dp"
    android:keyHeight="75dp"
    android:keyWidth="75dp"
    android:verticalGap="0dp" >

    <Row>
        <Key
            android:codes="126"
            android:keyWidth="80dp"

            android:keyEdgeFlags="left"
            android:keyLabel="~" />
        <Key
            android:codes="96"
            android:keyLabel="`" />
        <Key
            android:codes="33"
            android:keyLabel="!" />
        <Key
            android:codes="64"
            android:keyLabel="\@" />
        <Key
            android:codes="35"
            android:keyLabel="#" />
        <Key
            android:codes="36"
            android:keyLabel="$" />
        <Key
            android:codes="37"
            android:keyLabel="%" />
        <Key
            android:codes="94"
            android:keyLabel="^" />
        <Key
            android:codes="38"
            android:keyLabel="&amp;" />
        <Key
            android:codes="42"
            android:keyWidth="80dp"

            android:keyEdgeFlags="right"
            android:keyLabel="*" />
    </Row>
    <Row>
        <Key
            android:codes="40"
            android:keyWidth="80dp"

            android:keyEdgeFlags="left"
            android:keyLabel="(" />
        <Key
            android:codes="41"
            android:keyLabel=")" />
        <Key
            android:codes="95"
            android:keyLabel="_" />
        <Key
            android:codes="45"
            android:keyLabel="-" />
        <Key
            android:codes="43"
            android:keyLabel="+" />
        <Key
            android:codes="61"
            android:keyLabel="=" />
        <Key
            android:codes="123"
            android:keyLabel="{" />
        <Key
            android:codes="125"
            android:keyLabel="}" />
        <Key
            android:codes="91"
            android:keyLabel="[" />
        <Key
            android:codes="93"
            android:keyWidth="80dp"

            android:keyEdgeFlags="right"
            android:keyLabel="]" />
    </Row>
    <Row>
        <Key
            android:codes="124"
            android:keyWidth="80dp"

            android:keyEdgeFlags="left"
            android:keyLabel="|" />
        <Key
            android:codes="92"
            android:keyLabel="\\" />
        <Key
            android:codes="58"
            android:keyLabel=":" />
        <Key
            android:codes="59"
            android:keyLabel=";" />
        <Key
            android:codes="34"
            android:keyLabel="&quot;" />
        <Key
            android:codes="39"
            android:keyLabel="&apos;" />
        <Key
            android:codes="60"
            android:keyLabel="&lt;" />
        <Key
            android:codes="62"
            android:keyLabel=">" />
        <Key
            android:codes="44"
            android:keyLabel="," />
        <Key
            android:codes="-5"
            android:isRepeatable="true"
            android:keyWidth="80dp"
            android:keyEdgeFlags="right"
            android:keyIcon="@drawable/keyboard_delete" />
    </Row>
    <Row>
        <Key
            android:codes="-11"
            android:keyEdgeFlags="left"
            android:keyLabel="@string/bio_number"
            android:keyWidth="120dp" />
        <Key
            android:codes="-21"
            android:keyLabel="@string/bio_symbols"
            android:keyWidth="105dp" />
        <Key
            android:codes="-31"
            android:keyLabel="@string/bio_letters"
            android:keyWidth="105dp" />
        <Key
            android:codes="46"
            android:keyLabel="."
            android:keyWidth="75dp" />
        <Key
            android:codes="63"
            android:keyLabel="\?"
            android:keyWidth="75dp" />
        <Key
            android:codes="47"
            android:keyLabel="/"
            android:keyWidth="75dp" />
        <Key
            android:codes="-2"
            android:keyLabel="@string/bio_clear"
            android:keyWidth="105dp" />
        <Key
            android:codes="-3"
            android:keyEdgeFlags="right"
            android:keyLabel="@string/bio_done"
            android:keyWidth="120dp" />
    </Row>

</Keyboard>